--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="whitish">#19FFFFFF</color>
+    <color name="yellow">#caaa4d</color>
+    <color name="green">#40a56d</color>
+    <color name="violet">#7d2bcb</color>
+
 </resources>
